# dnsresolvr

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/dnsresolvr-cli/: Cargo.toml
crates/dnsresolvr-cli/src/: main.rs  tui.rs
crates/dnsresolvr-core/: Cargo.toml
crates/dnsresolvr-core/src/: bench.rs  domains.rs  export.rs  lib.rs  probe.rs  resolver.rs  resolvers.json  stats.rs  transport.rs
