[workspace]
resolver = "2"
members = [
    "crates/dnsresolvr-core",
    "crates/dnsresolvr-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/brkbkts/dnsresolvr"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["net", "time", "macros", "rt-multi-thread", "sync"] }
hickory-proto = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
