[workspace]
resolver = "2"
members = [
    "crates/dnsresolvr-core",
    "crates/dnsresolvr-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/brkbkts/dnsresolvr"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["net", "time", "macros", "rt-multi-thread", "sync", "io-util"] }
hickory-proto = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# TLS stack. Ring crypto backend keeps Windows builds NASM-free.
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
webpki-roots = "0.26"
# HTTP client for DoH. -no-provider lets us share the ring-based rustls we already pulled in.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider", "http2"] }
