[package]
name = "dnsresolvr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core benchmarking engine for dnsresolvr"

[dependencies]
tokio = { workspace = true }
hickory-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
